# data-sandbox

./: .dockerignore  .env.example  .gitignore  BRANCH_CONTENTS.md  CLAUDE.md  PLAN.md  README.md  TEST_REPORT.md  WEB_CLIENT_TEST_REPORT.md  docker-compose.yml  pyproject.toml  quickstart.sh
browser-tools/: README.md  click.js  evaluate.js  navigate.js  package-lock.json  package.json  screenshot.js
db/: init.sql
docker/: Dockerfile.api
examples/: basic_workflow.py
scripts/: create_dag_workflow.py  create_sample_workflows.py  generate_sample_data.py  run_web_tests.sh  verify_dag_results.py  verify_setup.py
sdk/: __init__.py  client.py
src/: config.py  database.py  models.py
src/api/: main.py  schemas.py
src/api/routes/: datasets.py  nodes.py  workflows.py
src/data_layer/: __init__.py  duckdb_client.py  minio_client.py
src/operations/: __init__.py  base.py  fft.py  filter.py  time_shift.py  unit_conversion.py
src/workflow/: __init__.py  executor.py
tests/: test_api_integration.js  test_dag_algorithm.js  test_integration.py  test_web_client.js
web/: nginx.conf
web/public/: app.js  index.html
